--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -12,15 +12,16 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .header {
-    background: darkgrey;
+    background: black;
     border-radius: 12px;
     padding: 1rem;
     position: fixed;
-    top: 5%;
+    top: 0;
+    width: 100vw;
 }
 
 .shop-title {
@@ -49,13 +50,4 @@
     margin-left: 0.4rem;
 };
 
-.utility {
-    background: yellow;
-    color: red;
-    font-size: 1.5rem;
-}
-
-a:hover {
-  color: #535bf2;
-}
 
