--- a/src/Styles/Homepage.module.css
+++ b/src/Styles/Homepage.module.css
@@ -3,5 +3,44 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: baseline;
+    margin-top: max(16px, 5%);
+}
+
+.image-wrapper {
+    background: url("../assets/images/clothes-clothing-store.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 40vh;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 2rem;
+}
+
+.image-text {
+    font-size: 2rem;
+    color: black;
+    background-color: lightgray;
+    opacity: .8;
+    padding: 1rem;
+}
+
+.btn {
+    background: black;
+    color: white;
+    padding: 1rem;
+    border: white 4px solid;
+    font-size: 16px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: white;
+    color: orange;
+    padding: 1rem;
+    font-size: 16px;
 }
