--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,18 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+ion-icon {
+    font-size: 20px;
+}
+
 a {
     font-weight: 500;
     text-decoration: inherit;
-    color: black;
+    color: white;
+}
+
+a:hover {
+    color: orange;
 }
 
 body {
