--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -17,7 +17,6 @@
 
 .header {
     background: black;
-    border-radius: 12px;
     padding: 1rem;
     position: fixed;
     top: 0;
@@ -28,7 +27,7 @@
     font-size: 24px;
     background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
     font-family: 'Sofia','Ananda', sans-serif;
-    padding: 0.6rem;
+    padding: 0.6rem 1rem;
     border-radius: 2rem;
     cursor: pointer;
 }
