--- a/src/Styles/Homepage.module.css
+++ b/src/Styles/Homepage.module.css
@@ -44,3 +44,15 @@
     padding: 1rem;
     font-size: 16px;
 }
+
+.category-list-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.clothes-image {
+    max-height: 200px;
+    width: auto;
+    border-radius: 50%;
+}
