--- a/src/Styles/ShopPage.module.css
+++ b/src/Styles/ShopPage.module.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 1rem;
+    gap: 1.5rem;
     padding: 1rem;
     height: fit-content;
 }
@@ -26,7 +26,8 @@
 .item-wrapper {
     flex-basis: 250px;
     height: 300px;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
 
     display: grid;
@@ -60,5 +61,30 @@
 
 .item-price::before {
     content: "$ ";
+}
+
+.loading-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -50px 0 0 -50px;
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid var(--third-color);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: logo-spin 1s linear infinite;
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
