--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+    max-width: 1280px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+}
 
 #cart-counter {
     font-size: 12px;
