--- a/src/Styles/Checkout.module.css
+++ b/src/Styles/Checkout.module.css
@@ -1,8 +1,9 @@
 
 .main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: stretch;
     height: 100%;
     width: 100%;
 }
